# AIPersonalFinanceTracker1

./: README.md  pyproject.toml  requirements.txt
notesbook/: AI_Personal_Finance_Tracker.ipynb  finance_tracker.db
